--- a/rf-cor.ipynb
+++ b/rf-cor.ipynb
@@ -7,30 +7,24 @@
    "metadata": {},
    "source": [
     "# Classical models on autocorrelation features\n",
-    "This is an attempt to find a good model by using as features the correlation between ROIs."
+    "This is an attempt to find a good model by using as features the correlation between ROIs.\n",
+    "First, our data:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "id": "30d2943c-965b-417d-a5d3-639c5527ca89",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from util import to_corr_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b8e4aee0-1f2f-4fa9-baf4-f80e7b624988",
-   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -401,12 +395,19 @@
        "[600 rows x 13344 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from util import to_corr_matrix\n",
+    "\n",
     "df = pd.read_csv(\"data/train_hw03.csv\")\n",
     "df"
    ]
@@ -445,7 +446,16 @@
    ],
    "source": [
     "X = df.iloc[:, 4:].apply(to_corr_matrix, axis=1).tolist()\n",
-    "X[0]"
+    "X[0] # each df row will be transformed into a correlation matrix"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "60e6a0a8",
+   "metadata": {},
+   "source": [
+    "Naively we would have 116x116 features, but we can reduce them to half by considering that a corr matrix is simmetric and that all the values on the diagonal are 1; so we can discard more than half of the features."
    ]
   },
   {
@@ -888,7 +898,7 @@
    "id": "72205f07-20ab-40cf-b59d-63eeb71105f2",
    "metadata": {},
    "source": [
-    "### Pipeline\n",
+    "### Data Transformer pipeline\n",
     "Now we put the process above in a single pipeline, in such a way to make it easily reproducible"
    ]
   },
@@ -953,7 +963,8 @@
    "id": "11602bb4-35f6-4bac-bd20-c0c04538e761",
    "metadata": {},
    "source": [
-    "### Data split"
+    "### Data split\n",
+    "This data split won't be used very much later because we prefer doing cross validation."
    ]
   },
   {
@@ -977,7 +988,10 @@
    "id": "3c6e4112-5884-4527-833a-e87dfe4819af",
    "metadata": {},
    "source": [
-    "# SkLearn"
+    "# Train\n",
+    "I started thinking of using a Random Forest, but that proved to be less performant and slower to train, SVMs instead proved more efficient (also less parameters to tune).\n",
+    "\n",
+    "Here's below the train pipeline and a fit without parameter tuning."
    ]
   },
   {
@@ -1047,29 +1061,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0538fa51-3df2-40c5-a84f-f46446ceaeb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6444444444444445"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_hat = pipe.predict(X_test)\n",
-    "\n",
-    "sum(y_hat == y_test) / len(y_hat)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "699e7588-4a4c-4261-a678-26537efcd6b1",
    "metadata": {},
@@ -1098,7 +1089,9 @@
    "source": [
     "from sklearn.metrics import ConfusionMatrixDisplay\n",
     "\n",
-    "ConfusionMatrixDisplay.from_predictions(y_test, y_hat)"
+    "y_hat = pipe.predict(X_test)\n",
+    "ConfusionMatrixDisplay.from_predictions(y_test, y_hat)\n",
+    "'Accuracy', sum(y_hat == y_test) / len(y_hat)"
    ]
   },
   {
@@ -1107,7 +1100,10 @@
    "id": "a72cc252-292c-4e98-9113-05bfd628679d",
    "metadata": {},
    "source": [
-    "# GridSearch"
+    "## GridSearch\n",
+    "The number of parameters for the SVC is rather small, and by looking at the results it also appears that the `class_weight` isn't that effective at all, mainly we need to tune the `C` parameter, which is the regularization term.\n",
+    "\n",
+    "Best Params I obtained: `{'svc__C': 2.5, 'svc__class_weight': None}`"
    ]
   },
   {
@@ -1211,8 +1207,8 @@
     "# }\n",
     "\n",
     "param_grid = {\n",
-    "   'svc__C' : np.arange(0.1, 10, 0.1),\n",
-    "   'svc__class_weight' : ['balanced', None]\n",
+    "   'svc__C' : np.arange(0.3, 3, 0.02) # np.arange(0.1, 10, 0.1),\n",
+    "#    'svc__class_weight' : ['balanced', None]\n",
     "}\n",
     "model = GridSearchCV(\n",
     "    pipe, \n",
@@ -1260,6 +1256,7 @@
     "import matplotlib.pyplot as plt\n",
     "sns.set(rc={'figure.figsize':(10,3)})\n",
     "\n",
+    "# if you have more than 2 hyperparams:\n",
     "# for param in param_grid.keys():\n",
     "#     sns.boxplot(res, x = 'value', y = 'param_' + param, orient='h')\n",
     "#     plt.show()\n",
@@ -1269,10 +1266,21 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "a3c428af",
+   "metadata": {},
+   "source": [
+    "Comment: \n",
+    "- it appears that the class_weight doesn't make that much of a difference.\n",
+    "- also it looks like that over some value of `C` (like 3) the performance is always the same and it's not worth exploring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f6f32040",
    "metadata": {},
    "source": [
-    "## Submission"
+    "# Submission\n",
+    "Code for submitting to the competition, just run this cell and upload the results."
    ]
   },
   {
@@ -1290,25 +1298,6 @@
     "competition['target'] = np.where(model.predict(X_compete), 'autism', 'control')\n",
     "competition['target'].to_csv('data/submission.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "f8c23a1b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'svc__C': 2.5000000000000004, 'svc__class_weight': None}"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
